# pricing-manager-app

./: Makefile  README.md  docker-compose.yml
backend/: .coverage  Dockerfile  celerybeat-schedule  pyproject.toml
backend/config/: celery_app.py  settings.py  settings_test.py  urls.py
backend/pricing/: admin.py  db.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/pricing/migrations/: 0001_initial.py
backend/scripts/: seed_source_db.py
backend/task_manager/: logger.py  models.py  urls.py  views.py
backend/testing/: apps.py  models.py  serializers.py  signals.py  super_hero.py  urls.py  views.py
backend/testing/migrations/: 0001_initial.py  0002_product_price_gt_zero_product_stock_count_gt_zero.py  0003_alter_product_id.py
backend/testing/tests/: test_model.py  test_signals.py  test_super_hero.py  test_views.py
